[package]
name = "mtg"
description="A utility for toggling the monitor state on Linux"
license="GPL-3.0-only"
version = "0.1.1"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.3.5", features = ["derive"] }
lazy_static="1.4.0"
notify-rust="4.8.0"
regex="1.8.4"

